2021.??.??
  * Fixed stuck/unresponsive "Scene Check" yes/no prompt when PreDB is down
  * Try to find release on SrrDB if PreDB is down before prompting user
  * Added "User Manual" and "CLI Reference" to documentation


2021.10.04
  * screenshots: Fix --upload-to/-u option (Thanks to @ctlaltdefeat)
  * Display remaining time and other information while creating the torrent


2021.09.11
  * torrent-create and submit: Add --exclude-files/--ef and
    --exclude-files-regex/--efr options that exclude files from the generated
    torrent that aren't already excluded by the trackers.TRACKER.exclude option
  * bB: Fix unhandled "AttributeError: 'NoneType' object has no attribute
    'next_sibling'"


2021.09.10
  * Use long edition names, e.g. "Special Edition" instead of "Special"
  * BHD: Added --title/-t option that only generates the release name
  * bB: Get runtime(s) from IMDb/TVmaze


2021.09.07
  * Fixed exception when finding newer version


2021.09.06
  * IMDb: Fixed getting genre tags
  * bB: Fixed science.fiction tag
  * BHD: Fixed --description option
  * BHD: Resolved "500 Server Error" when uploading a .nfo file
  * BHD: Fixed translation of "(E-)AC-3" to "DD(P)" with Atmos
  * Fixed detection of Opus audio codec
  * Print notification to stderr if there is a newer version available


2021.08.12
  * New command: download-location: Find existing file(s) listed in a torrent
    file, hard-link them to the file or directory structure expected by the
    torrent file, and print the appropriate download path (run "upsies dloc -h"
    for more information)
  * Added detection of Dolby Vision in release name and video file
  * bB: Added support for "Dolby Vision" tag
  * bB: Retry login up to 30 times instead of 15 when encountering login bug and
    limit the delay between login attempts at 5 seconds.
  * bB: Short option for --screenshots changed to --ss
  * BHD: Added trackers.bhd.screenshots setting and --screenshots option